@@ -1,3 +1,9 @@
+2009-07-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
+
+	* chrome/content/sogo-connector/calendar/utils.js: overriden
+	"openDialog" to force a refresh of the item calendar before
+	displaying the dialog IF the item is an invitation or is read-only.
+
 2009-07-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
 	*
